mountall (2.41) UNRELEASED; urgency=low

  [ Alexander Achenbach ]
  * Don't block other, unrelated mounts from being processed while one
    mount is blocked on its mounting signal to process.  LP: #643289.

 -- Steve Langasek <vorlon@debian.org>  Sat, 08 Sep 2012 00:10:09 -0700

mountall (2.40) unstable; urgency=low

  * Add /run/user as a default mountpoint, in support of $XDG_RUNTIME_DIR.
    LP: #894391.

 -- Steve Langasek <vorlon@debian.org>  Fri, 31 Aug 2012 19:55:01 -0700

mountall (2.39) unstable; urgency=low

  * Adjust parsing of device names so that network mounts pointing to the
    server's root don't have the path mis-normalized to the empty string.
    Thanks to Damien Churchill <damien.churchill@ukplc.net> for the initial
    implementation.  LP: #809221.
  * Add compatibility jobs with names to match the historic sysvinit init
    scripts, so that startpar can DTRT.

 -- Steve Langasek <vorlon@debian.org>  Fri, 31 Aug 2012 18:31:19 +0000

mountall (2.38) unstable; urgency=low

  * Counterproductively document in debian/copyright the license of files in
    intl that form no part of the binary package, to get through the Debian
    NEW queue.

 -- Steve Langasek <vorlon@debian.org>  Sat, 30 Jun 2012 11:44:59 -0700

mountall (2.37) unstable; urgency=low

  * Initial upload to Debian.
  * Document the branch location with Vcs-Bzr.
  * Mark myself as maintainer, with Scott and James as uploaders.
  * Drop maintainer scripts, only used for upgrades from natty and earlier
    and no longer relevant post-precise.
  * Replace build flag handling in debian/rules with debhelper compat 9 and
    dpkg-buildflags.
  * Remove extra space in fsck progress message.  LP: #573304.
  * Adjust build-dependencies for the differing plymouth -dev package name
    in Debian vs. Ubuntu.
  * Fix an inverted check for whether the change-mount mntctl has a
    different device name.
  * Update standards-version to 3.9.3.