@@ -4,6 +4,10 @@ mountall (2.41) UNRELEASED; urgency=low
   * Don't block other, unrelated mounts from being processed while one
     mount is blocked on its mounting signal to process.  LP: #643289.
 
+  [ Steve Langasek ]
+  * Likewise, allow 'mounted' signals to be processed in parallel with
+    other unrelated mounts.
+
  -- Steve Langasek <vorlon@debian.org>  Sat, 08 Sep 2012 00:10:09 -0700
 
 mountall (2.40) unstable; urgency=low
